--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: red;
   background-image: url('/public/BG-admin.png');
-    background-size: cover;      /* Cover the viewport */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-attachment: fixed; /* Fixed background image */
+    background-size: cover;      
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
   
 }
 
@@ -44,7 +44,7 @@ code {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-right: 20px; /* Adjust as per your needs */
+  margin-right: 20px; 
 }
 
 .top-card {
